Fix spacing on forms

--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     text-transform: capitalize;
     position: relative;
     padding: 10px;
@@ -31,8 +31,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 40px;
-    margin-bottom: 37px;
+    margin-top: 0px;
+    margin-bottom: 35px;
 }
 
 .form-header h1 {
